fixing generated specs on mobile css off-centered

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1960,6 +1960,7 @@ nav a.home-link:hover {
   }
 
   .board-list-div {
+    width: 95%;
     max-width: 100%; 
   }
 }
